Sat Nov  6 07:33:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_export_prefix): check for prefixed
	  underscore of exported symbols

	* tool/rbinstall.rb (bin-comm): prepend prolog shell script if
	  necessary.

	* configure.in (LIBRUBY_RELATIVE): use rpath token expansion.

Sat Nov  6 07:24:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/ruby.pc.in (arch, sitearch): reordered.

	* configure.in: keep failed file.

Sat Nov  6 07:03:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_fork_err): save errinfo before fdopen.

Sat Nov  6 00:43:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/openssl/ossl_ocsp.c (ossl_ocspcid_initialize): an optional
	  parameter may be used to specify the OpenSSL::OCSP::CertificateId on
	  initialization.  Thanks Elise Huard! [ruby-core:32460]

Fri Nov  5 12:23:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_{process,system}.rb (test_fallback_to_sh):
	  meaningless and wrong tests where /bin/sh does not exist.

	* process.c (proc_spawn_v): should spawn, not exec.

Fri Nov  5 01:21:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_exec_v, proc_spawn_v): try to execute with sh if
	  no shebang.  [ruby-core:32745] [EXPERIMENTAL]

Fri Nov  5 00:39:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_readlines, rb_io_each_line): limit must not be zero.
	  a patch from Tomoyuki Chikanaga at [ruby-dev:42538].  #4024

Fri Nov  5 00:14:15 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/extconf.rb: fixing ffi library location on windows.
	  Thanks Usa! [ruby-core:32930]

Thu Nov  4 20:04:44 2010  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_newobj): force garbage_collect() if GC.stress == true.

Thu Nov  4 19:48:22 2010  Koichi Sasada  <ko1@atdot.net>

	* ChangeLog: missed to write a last ChangeLog.

	* gc.c (gc_finalize_deferred): removed.

	* gc.c (rb_gc_finalize_deferred): Do not invoke a free_unused_heaps().
