@@ -1,3 +1,8 @@
+Sun Nov  7 06:16:33 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* test/openssl/test_ocsp.rb: adding test for r29699.  Thanks Elise
+	  Huard! [ruby-core:32460]
+
 Sat Nov  6 07:33:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (rb_cv_export_prefix): check for prefixed
